@@ -25,10 +25,9 @@ function setActiveStyleSheet(title) {
 
 <div id="top">
 
-<a href="http://live.gnome.org/Bugsquad/BugDays">
-<img src="/img/flash/bugday.png" width="295" height="350"
-title="Bugdays" alt="Time for bug days" /></a>
-<a href="http://www.gnome.org/start/2.18/"><img src="/img/flash/two-eighteen-small.png" width="441" height="350"
+
+
+<a href="http://www.gnome.org/start/2.18/"><img src="/img/flash/two-eighteen.png" width="800" height="350"
 title="GNOME 2.18" alt="GNOME 2.18, simply beautiful" /></a>
 
 </div><!-- top -->
