@@ -1,3 +1,9 @@
+2007-03-22  Andreas Nilsson <andreas@andreasn.se>
+
+	* www.gnome.org/index.html:
+	Changed back to 2.18 banner only as bug days are over.
+
+
 2006-10-23  Brian Cameron  <brian.cameron@sun.com>
 
 	* configure.in, www.gnome.org/projects/gdm/*.html,
